name:                regex-ast
version:             0.1.0.0
synopsis:            Parses regular expressions into an AST
description:         Parses regular expressions into an AST
homepage:            http://github.com/micxjo/regex-ast
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2016 Micxjo Funkcio
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Regex.AST
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
  default-language:    Haskell2010

test-suite regex-ast-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , regex-ast
                     , tasty
                     , tasty-hunit
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/regex-ast
